[tool.poetry]
name = "sonos-inkyphat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sonos_inkyphat"}]

[tool.poetry.dependencies]
python = "^3.11"
sonos_ws = { path = "../sonos_ws", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
